# qry

./: Cargo.toml  rust-toolchain
.github/workflows/: build.yaml
cli/: Cargo.toml
qry/: Cargo.toml
qry-lang/: Cargo.toml
qry-lang/src/: parser.rs
qry-runtime/: Cargo.toml
qry-runtime/src/: builtin.rs  callable.rs  environment.rs  eval.rs  eval_context.rs  exception.rs  function.rs  lib.rs  method.rs  value.rs
qry-runtime/src/stdlib/core/: types.rs
qry-runtime/tests/: data.rs  functions.rs  imports.rs  methods.rs  syntax.rs
qry-runtime/tests/helpers/: mod.rs
qry-web/: Cargo.toml
qry-web/src/: lib.rs
qry-web/www/: index.html  index.js  package-lock.json  package.json
qry/src/: main.rs
qry/src/runtime/: builtin.rs  eval_context.rs  exception.rs  function.rs  mod.rs
qry/src/stdlib/: mod.rs
qry/src/stdlib/core/: types.rs
qry/src/stdlib/data/: data_env.rs  dataframe.rs  mod.rs  sql_pipeline.rs  sqlite.rs  vectors.rs
qry/tests/: data.rs  imports.rs  methods.rs  syntax.rs
qry/tests/helpers/: mod.rs
src/: lib.rs
src/cli/: main.rs
src/lang/: parser.rs  syntax.rs
src/runtime/: builtin.rs  callable.rs  environment.rs  eval.rs  eval_context.rs  exception.rs  function.rs  interpreter.rs  method.rs  mod.rs  types.rs  value.rs
src/stdlib/core/: mod.rs  ops.rs  types.rs
src/stdlib/data/: arrow_helpers.rs  connection.rs  data_env.rs  dataframe.rs  mod.rs  sql_codegen.rs  sql_pipeline.rs  sqlite.rs  vectors.rs
src/stdlib/ops/: mod.rs  op_methods.rs
tests/: data.rs  functions.rs  imports.rs  methods.rs  syntax.rs
tests/helpers/: mod.rs
(+8 files in other folders)
