[package]
name = "qry-web"
version = "0.1.0"
authors = ["Ruan Pearce-Authers <ruanpa@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
qry-lang = { path = "../qry-lang" }
qry-runtime = { path = "../qry-runtime" }
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
